API fixes to remove redundant url information
